src/test/resources/org/xmlcml/www/convention/dictionary/valid/entry-with-none-unitType-must-have-none-unit.cml
<?xml version="1.0" encoding="UTF-8" ?>
<dictionary xmlns="http://www.xml-cml.org/schema"
            xmlns:convention="http://www.xml-cml.org/convention/"
            xmlns:siUnit="http://www.xml-cml.org/unit/si/"
            xmlns:unitType="http://www.xml-cml.org/unit/unitType/"
            xmlns:dc="http://purl.org/dc/elements/1.1/"
            xmlns:xhtml="http://www.w3.org/1999/xhtml"
            xmlns:xsd="http://www.w3.org/2001/XMLSchema"
            convention="convention:dictionary"
            title="fundamental chemistry concepts"
            namespace="http://www.xml-cml.org/dictionary/dummy/"
            dictionaryPrefix="dummy">

     <dc:title>test file for http://www.xml-cml.org/convention/dictionary convention</dc:title>
    <dc:description>If the unitType is expressly given as none then the unit attribute MUST be present and its value must point to http://www.xml-cml.org/unit/si#none</dc:description>
    <dc:author>J A Townsend</dc:author>
    <dc:rights>Copyright J A Townsend jat45@cantab.net 2009.</dc:rights>
    <dc:date>2011-04-08</dc:date>
            <description>
            <xhtml:p>
                A dictionary for testing
            </xhtml:p>
        </description>
    <entry id="none" term="none"
           dataType="xsd:string" unitType="unitType:none" units="siUnit:none">
        <definition>
            <xhtml:p>
                something without unitType
            </xhtml:p>
        </definition>
        <description>
            <xhtml:p>
                something without unitType or units
            </xhtml:p>
        </description>
    </entry>

</dictionary>